Refactor statusbar scss

--- a/src/statusbar.scss
+++ b/src/statusbar.scss
@@ -16,68 +16,71 @@
   border-left: none;
   border-top: 1px solid var(--the-color);
   background-color: var(--the-background-color) !important;
-}
-.status-bar > div.status-bar-item {
-  border-radius: 0;
-  padding: 0;
-  padding-left: 5px;
-  margin-top: -0.2px;
-  border-top: 1px solid var(--the-color);
-  background-color: var(--the-background-color);
 
+  > div.status-bar-item {
+    border-radius: 0;
+    padding: 0;
+    padding-left: 5px;
+    margin-top: -0.2px;
+    border-top: 1px solid var(--the-color);
+    background-color: var(--the-background-color);
+
+    &.mod-clickable:hover {
+      color: var(--material-color-orange-500);
+    }
+  }
+  > div.status-bar-item:nth-last-child(odd) {
+    --status-bar-text-color: var(--the-background-color);
+    --status-bar-background: var(--the-color);
+    color: var(--status-bar-text-color);
+    background-color: var(--status-bar-background);
+    border-radius: 0;
+    opacity: initial !important;
+  }
+  > div.status-bar-item:nth-last-child(even) {
+    --status-bar-text-color: var(--the-color);
+    --status-bar-background: var(--the-background-color);
+    opacity: initial !important;
+  }
+
+  > .status-bar-item:after {
+    content: "";
+    border-top: calc(1 * var(--status-bar-height)) solid var(--status-bar-background);
+    // border-bottom: calc(0.5 * var(--status-bar-height)) solid var(--status-bar-text-color);
+    // border-left: calc(0.5 * var(--status-bar-height)) solid transparent;
+    border-right: calc(1* var(--status-bar-height)) solid transparent;
+    margin-left: 5px;
+    background-color: var(--status-bar-text-color);
+  
+  }
+
+  > .status-bar-item:not(:last-child):before {
+    content: "";
+    position: absolute;
+    right: -16px;
+    bottom: 0px;
+    width: 0;
+    height: 0;
+    border-top: calc(0.5 * var(--status-bar-height) - 1px) solid transparent;
+    border-bottom: calc(0.5 * var(--status-bar-height)) solid transparent;
+    border-left: calc(0.5 * var(--status-bar-height)) solid var(--the-background-color);
+    background-color: var(--the-color);
+  }
+
+
+  > .status-bar-item:is(:first-child):before {
+    content: "";
+    position: relative;
+    top: -1.3px;
+    height: calc(.5 * var(--status-bar-height) - 1);
+    width: calc(.5 * var(--status-bar-height) - 1);
+    left: -26px;
+    border-top: calc(1 * var(--status-bar-height)) solid var(--status-bar-background);
+    border-left: calc(1 * var(--status-bar-height)) solid var(--status-bar-text-color);
+    border-bottom: none;
+    clip-path: polygon(100% 0, 0 0%, 100% 100%);
+  }
 }
 
-.status-bar > div.status-bar-item:nth-last-child(odd) {
-  --status-bar-text-color: var(--the-background-color);
-  --status-bar-background: var(--the-color);
-  color: var(--status-bar-text-color);
-  background-color: var(--status-bar-background);
-  border-radius: 0;
-  opacity: initial !important;
-}
-.status-bar > div.status-bar-item:nth-last-child(even) {
-  --status-bar-text-color: var(--the-color);
-  --status-bar-background: var(--the-background-color);
-  opacity: initial !important;
 
-}
-.status-bar > .status-bar-item:after {
-  content: "";
-  border-top: calc(1 * var(--status-bar-height)) solid var(--status-bar-background);
-  // border-bottom: calc(0.5 * var(--status-bar-height)) solid var(--status-bar-text-color);
-  // border-left: calc(0.5 * var(--status-bar-height)) solid transparent;
-  border-right: calc(1* var(--status-bar-height)) solid transparent;
-  margin-left: 5px;
-  background-color: var(--status-bar-text-color);
 
-}
-
-.status-bar-item.mod-clickable:hover {
-  color: var(--material-color-orange-500);
-}
-
-.status-bar > .status-bar-item:not(:last-child):before {
-  content: "";
-  position: absolute;
-  right: -16px;
-  bottom: 0px;
-  width: 0;
-  height: 0;
-  border-top: calc(0.5 * var(--status-bar-height) - 1px) solid transparent;
-  border-bottom: calc(0.5 * var(--status-bar-height)) solid transparent;
-  border-left: calc(0.5 * var(--status-bar-height)) solid var(--the-background-color);
-  background-color: var(--the-color);
-}
-
-.status-bar > .status-bar-item:is(:first-child):before {
-  content: "";
-  position: relative;
-  top: -1.3px;
-  height: calc(.5 * var(--status-bar-height) - 1);
-  width: calc(.5 * var(--status-bar-height) - 1);
-  left: -26px;
-  border-top: calc(1 * var(--status-bar-height)) solid var(--status-bar-background);
-  border-left: calc(1 * var(--status-bar-height)) solid var(--status-bar-text-color);
-  border-bottom: none;
-  clip-path: polygon(100% 0, 0 0%, 100% 100%);
-}
