Extract material colors from root colors into its own scss file

--- a/src/onering.scss
+++ b/src/onering.scss
@@ -1,5 +1,7 @@
+@import "./material-ui-colors.scss";
 @import "./statusbar.scss";
 
+// What does this do again?
 .markdown-rendered {
   tbody {
     tr:nth-child(odd) {
