Refactor to scss

--- a/src/onering.scss
+++ b/src/onering.scss
@@ -1,5 +1,8 @@
+@import "./base-colors.scss";
 @import "./wallpapers.scss";
 @import "./material-ui-colors.scss";
+
+@import "./multi-colored-folders.scss";
 @import "./statusbar.scss";
 
 // What does this do again?
