Fix right split lower window not having wallpaper

--- a/src/onering.scss
+++ b/src/onering.scss
@@ -5,6 +5,8 @@
 @import "./multi-colored-folders.scss";
 @import "./statusbar.scss";
 
+@import "./right-split.scss";
+
 // What does this do again?
 .markdown-rendered {
   tbody {
