--- a/src/multi-colored-folders.scss
+++ b/src/multi-colored-folders.scss
@@ -1,8 +1,12 @@
+/*
+A-source: https://forum.obsidian.md/t/adding-color-to-obsidian-a-rainbow-of-possibility/12805/11
+B-source: https://raw.githubusercontent.com/obsidian-community/obsidian-hub/main/02%20-%20Community%20Expansions/02.05%20All%20Community%20Expansions/CSS%20Snippets/Files%20explorer%20relations%20%26%20color%20%28Mara-Li%29.md
+*/
+
 /* Remove collapse arrow from top level folders */
 .nav-files-container {
   margin: 0px 5px;
 }
-
 
 .nav-folder.mod-root {
   border-radius: 0.5em 2em 0.4em 0.2em;
@@ -15,13 +19,13 @@
     transition: all 400ms ease-in;
   }
 
-  > .nav-folder-children { 
-
+  > .nav-folder-children {
     .nav-file {
       .nav-file-title {
         padding-left: 5px;
-       
-        &.is-active {  /* active file increase font size and removes normal highlight marker */
+
+        &.is-active {
+          /* active file increase font size and removes normal highlight marker */
           background-color: var(--theme-color-translucent-1);
         }
 
@@ -29,7 +33,8 @@
           color: var(--FoldText);
         }
 
-        &[data-path^="_"] { /* apply style to any child of a _ prefixed virtual file */
+        &[data-path^="_"] {
+          /* apply style to any child of a _ prefixed virtual file */
           border-bottom: 1px solid var(--secondary);
           display: none;
         }
@@ -43,7 +48,6 @@
     }
 
     > .nav-folder {
-
       > .nav-folder-title-content {
         padding-left: 0.5em !important;
       }
@@ -102,16 +106,15 @@
           background-color: var(--FoldZ-1);
         }
       }
-      > .nav-folder-children { /* General Nav Folder Children (this is the part that expands from each top level folder) */
+      > .nav-folder-children {
+        /* General Nav Folder Children (this is the part that expands from each top level folder) */
 
         border-radius: 0px 0px 5px 5px;
         padding: 0.1em 0.2em;
       }
 
-
-
       > .nav-folder-title {
-      /* Set up explorer container margins */
+        /* Set up explorer container margins */
         color: var(--FoldText);
         padding-left: 0.3em !important;
         margin-top: 0.1em;
@@ -120,11 +123,7 @@
         > .nav-folder-collapse-indicator {
           display: none; /* Remove collapse arrow from top level folders */
         }
-
-
-    
       }
-
     }
   }
 }
@@ -134,8 +133,6 @@
   width: 0px;
   height: 0px;
 }
-
-
 
 /* Relationship lines for 2nd, 3rd, and 4th level folders */
 .nav-folder.mod-root
