--- a/src/wallpapers.scss
+++ b/src/wallpapers.scss
@@ -34,24 +34,31 @@
   /* ## Waterworld city */
   /* --mm-image: url(https://images.alphacoders.com/131/1318300.png); */
 
-  /* Purplescape */
+  
+  // # Scapes
+  /* ## Purplescape */
   /* --mm-image: url(https://i.redd.it/jpuwznzf2wcb1.jpg); */
+  // ## Purple Edgescape
+  --mm-image: url(https://external-preview.redd.it/qiS6FTlK2fPyKIjCtQnDPlMWaRRc6t8ynBTGES-wK5c.jpg?auto=webp&s=665fac054a914ad24cf877d5e6201384c5f60274);
   /* Bluescape */
   /* --mm-image: url(https://images4.alphacoders.com/106/1067926.jpg); */
   // Doorscape
-  --mm-image: url(https://images7.alphacoders.com/110/1103663.jpg);
+  // --wallpaper-doorscape: url(https://images7.alphacoders.com/110/1103663.jpg);
 
+  /* ## ANIME Wallapers w/action figure */ 
   /* # Anime girl on School Rooftop */
   /* --mm-image: url("https://i.redd.it/aookl7ly26db1.jpg"); */
-  /* # THIS IS NO good Yellowscape */
-  /* --mm-image: url("https://i.redd.it/vnbodw5mz5ib1.jpg"); */
-  /* ANIME Wallapers w/action figure */ /* ## Spaceships LOGH */
+  
+  /* ## Spaceships LOGH */
   /* --mm-image: url(https://cdnb.artstation.com/p/assets/images/images/003/508/149/large/lorenz-hideyoshi-ruwwe-barbarossa-brunhilde-final-s.jpg); */
+  
   /* ## Evangelion */
   /* --mm-image: url("https://i.imgur.com/tjhUMrN.jpeg"); */
+
   /* --mm-image: url("https://wallpapers.com/images/hd/digital-tera-online-anime-scenery-60my5y6lkon2gg3k.webp"); */
   /* --mm-image: url(https://www.bing.com/th?id=OPN.RTNews_yGdv3SU2j2Pa702Q3F9NKw&w=400&h=200&c=7&rs=2&qlt=80&pid=PopNow); */
   /* --mm-image: url(https://i.redd.it/e00k5xmw80db1.jpg); */
+  
   --anu-image: url("https://i.redd.it/m23bwh4n0x151.png");
   /* </IMAGES> */
 
