--- a/src/onering.scss
+++ b/src/onering.scss
@@ -21,3 +21,32 @@
     }
   }
 }
+
+/* # Source and reading view for title/file name on content top */
+%backdrop {
+  color: white;
+  text-shadow: 1px 4px 3px rgb(233 117 71 / 153%);
+  background: rgba(0,0,0,.6);
+  padding: 1em 0.5em;
+  border-radius: 15px 15px 0 0;
+  margin-bottom: 0;
+}
+.markdown-source-view.mod-cm6.is-readable-line-width {
+  .inline-title {
+    @extend %backdrop;
+  }
+  .metadata-content {
+    @extend %backdrop;
+    text-shadow: initial;
+  }
+}
+.markdown-reading-view {
+  .mod-header:has(~ .obsidian-banner-wrapper) {
+    > .inline-title {
+
+      text-shadow: 1px 4px 3px rgb(233 117 71 / 113%);
+      color: white;
+      margin-left: 5%;
+    }
+  }
+}
