Remove editing view icon from tab bar.

--- a/src/onering.scss
+++ b/src/onering.scss
@@ -6,6 +6,7 @@
 @import "./statusbar.scss";
 
 @import "./right-split.scss";
+@import "./tab-bar";
 
 // What does this do again?
 .markdown-rendered {
