--- a/src/wallpapers.scss
+++ b/src/wallpapers.scss
@@ -34,12 +34,14 @@
   /* ## Waterworld city */
   /* --mm-image: url(https://images.alphacoders.com/131/1318300.png); */
 
-  
+  // # House On The Bayou
+  --mm-image: url("https://i.imgur.com/ZbyNlmh.png");
+
   // # Scapes
   /* ## Purplescape */
   /* --mm-image: url(https://i.redd.it/jpuwznzf2wcb1.jpg); */
   // ## Purple Edgescape
-  --mm-image: url(https://external-preview.redd.it/qiS6FTlK2fPyKIjCtQnDPlMWaRRc6t8ynBTGES-wK5c.jpg?auto=webp&s=665fac054a914ad24cf877d5e6201384c5f60274);
+  // --mm-image: url(https://external-preview.redd.it/qiS6FTlK2fPyKIjCtQnDPlMWaRRc6t8ynBTGES-wK5c.jpg?auto=webp&s=665fac054a914ad24cf877d5e6201384c5f60274);
   /* Bluescape */
   /* --mm-image: url(https://images4.alphacoders.com/106/1067926.jpg); */
   // Doorscape
