--- a/src/onering.scss
+++ b/src/onering.scss
@@ -56,6 +56,7 @@
     border-radius: 0 1em 1em 0;
   }
   .markdown-embed .markdown-embed-link[aria-label="Open link"]{
+    padding-top: 1em;
     margin-right: 1em;
   }
 }
