--- a/src/material-ui-colors.scss
+++ b/src/material-ui-colors.scss
@@ -1,3 +1,16 @@
+$material-color-orange-900: #e65100;
+
+$material-color-blue: #2196f3;
+$material-color-blue-50: #e3f2fd;
+$material-color-blue-100: #bbdefb;
+$material-color-blue-200: #90caf9;
+$material-color-blue-300: #64b5f6;
+$material-color-blue-400: #42a5f5;
+$material-color-blue-600: #1e88e5;
+$material-color-blue-700: #1976d2;
+$material-color-blue-800: #1565c0;
+$material-color-blue-900: #0d47a1;
+
 :root {
   --material-color-red: #f44336;
   --material-color-red-50: #ffebee;
@@ -234,6 +247,7 @@
   --material-color-orange-700: #f57c00;
   --material-color-orange-800: #ef6c00;
   --material-color-orange-900: #e65100;
+
   --material-color-orange-a100: #ffd180;
   --material-color-orange-a200: #ffab40;
   --material-color-orange-a400: #ff9100;
