--- a/src/material-ui-colors.scss
+++ b/src/material-ui-colors.scss
@@ -11,6 +11,29 @@ $material-color-blue-700: #1976d2;
 $material-color-blue-800: #1565c0;
 $material-color-blue-900: #0d47a1;
 
+// $material-color-red: #f44336;
+// $material-color-red-50: #ffebee;
+$material-color-red-100: #ffcdd2;
+$material-color-red-200: #ef9a9a;
+// $material-color-red-300: #e57373;
+// $material-color-red-400: #ef5350;
+// $material-color-red-500: var($material-color-red);
+// $material-color-red-600: #e53935;
+$material-color-red-700: #d32f2f;
+$material-color-red-800: #c62828;
+$material-color-red-900: #b71c1c;
+
+$material-color-orange-800: #ef6c00;
+$material-color-orange-900: #e65100;
+
+$material-color-deep-orange-700: #e64a19;
+$material-color-deep-orange-800: #d84315;
+$material-color-deep-orange-900: #bf360c;
+
+$material-color-green-700: #388e3c;
+$material-color-green-800: #2e7d32;
+$material-color-green-900: #1b5e20;
+
 :root {
   --material-color-red: #f44336;
   --material-color-red-50: #ffebee;
