Create raw supply of colors and then colocate an exemplary knob

--- a/src/onering.scss
+++ b/src/onering.scss
@@ -8,6 +8,7 @@
 @import "./right-split.scss";
 @import "./tab-bar";
 @import "./headers";
+@import "./embed-blocks";
 
 // What does this do again?
 .markdown-rendered {
