Allow scrolling on embedded query blocks

--- a/src/embed-blocks.scss
+++ b/src/embed-blocks.scss
@@ -6,6 +6,7 @@
     .internal-query {
       border: 2px solid shared.$embedBorderColor;
       max-height: 30vmin;
+      overflow-y: scroll;
     }
   }
 
