--- a/src/wallpapers.scss
+++ b/src/wallpapers.scss
@@ -17,7 +17,7 @@
   /* ## Cozy city alley */
   /* --mm-image: url("https://i.redd.it/5mqp7trvxov51.jpg"); */
   /* ## Cozy 1D1 */
-  /* --mm-image: url(https://wallpapercave.com/wp/wp6049353.jpg); */
+--mm-image: url(https://wallpapercave.com/wp/wp6049353.jpg); 
 
   // # Sunrises
   /* Kansas Sunrise */
@@ -35,7 +35,7 @@
   /* --mm-image: url(https://images.alphacoders.com/131/1318300.png); */
 
   // # House On The Bayou
-  --mm-image: url("https://i.imgur.com/ZbyNlmh.png");
+  // --mm-image: url("https://i.imgur.com/ZbyNlmh.png");
 
   // # Scapes
   /* ## Purplescape */
