--- a/src/material-ui-colors.scss
+++ b/src/material-ui-colors.scss
@@ -1,7 +1,4 @@
-$material-color-orange-900: #e65100;
-
-$material-color-blue: #2196f3;
-$material-color-blue-50: #e3f2fd;
+// $material-color-red: #f44336;
 $material-color-blue-100: #bbdefb;
 $material-color-blue-200: #90caf9;
 $material-color-blue-300: #64b5f6;
@@ -10,29 +7,38 @@ $material-color-blue-600: #1e88e5;
 $material-color-blue-700: #1976d2;
 $material-color-blue-800: #1565c0;
 $material-color-blue-900: #0d47a1;
-
-// $material-color-red: #f44336;
-// $material-color-red-50: #ffebee;
-$material-color-red-100: #ffcdd2;
-$material-color-red-200: #ef9a9a;
-// $material-color-red-300: #e57373;
-// $material-color-red-400: #ef5350;
-// $material-color-red-500: var($material-color-red);
-// $material-color-red-600: #e53935;
-$material-color-red-700: #d32f2f;
-$material-color-red-800: #c62828;
-$material-color-red-900: #b71c1c;
-
-$material-color-orange-800: #ef6c00;
-$material-color-orange-900: #e65100;
-
+$material-color-blue: #2196f3;
+$material-color-brown-700: #5d4037;
+$material-color-brown-800: #4e342e;
+$material-color-brown-900: #3e2723;
+$material-color-deep-orange-100: #ffccbc;
+$material-color-deep-orange-200: #ffab91;
+$material-color-deep-orange-300: #ff8a65;
 $material-color-deep-orange-700: #e64a19;
 $material-color-deep-orange-800: #d84315;
 $material-color-deep-orange-900: #bf360c;
-
+$material-color-deep-orange: #ff5722;
 $material-color-green-700: #388e3c;
 $material-color-green-800: #2e7d32;
 $material-color-green-900: #1b5e20;
+$material-color-orange-100: #ffe0b2;
+$material-color-orange-200: #ffcc80;
+$material-color-orange-300: #ffb74d;
+$material-color-orange-800: #ef6c00;
+$material-color-orange-900: #e65100;
+$material-color-orange-900: #e65100;
+$material-color-pink-700: #c2185b;
+$material-color-pink-800: #ad1457;
+$material-color-pink-900: #880e4f;
+$material-color-pink: #e91e63;
+$material-color-purple-700: #7b1fa2;
+$material-color-purple-800: #6a1b9a;
+$material-color-purple-900: #4a148c;
+$material-color-red-100: #ffcdd2;
+$material-color-red-200: #ef9a9a;
+$material-color-red-700: #d32f2f;
+$material-color-red-800: #c62828;
+$material-color-red-900: #b71c1c;
 
 :root {
   --material-color-red: #f44336;
