--- a/src/onering.scss
+++ b/src/onering.scss
@@ -9,6 +9,7 @@
 @import "./tab-bar";
 @import "./headers";
 @import "./embed-blocks";
+@import "./embedded-headers.scss";
 @import "./right-split-views.scss/index.scss";
 
 @import "./table.scss";
