--- a/src/material-ui-colors.scss
+++ b/src/material-ui-colors.scss
@@ -40,6 +40,13 @@ $material-color-red-700: #d32f2f;
 $material-color-red-800: #c62828;
 $material-color-red-900: #b71c1c;
 
+$material-color-yellow-100: #fff9c4;
+$material-color-yellow-200: #fff59d;
+$material-color-yellow-300: #fff176;
+$material-color-yellow-700: #fbc02d;
+$material-color-yellow-800: #f9a825;
+$material-color-yellow-900: #f57f17;
+
 :root {
   --material-color-red: #f44336;
   --material-color-red-50: #ffebee;
